fix: large logs page stuck

--- a/src/components/logs-viewer/styles/index.less
+++ b/src/components/logs-viewer/styles/index.less
@@ -5,6 +5,44 @@
     position: absolute;
     top: 16px;
     right: 16px;
+    width: 40px;
+    height: 130px;
+
+    .pg-inner {
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 30px;
+        bottom: 30px;
+        right: 0;
+        width: 100px;
+        height: 60px;
+
+        &:hover {
+          .pagination {
+            display: flex;
+          }
+        }
+      }
+
+      .pagination {
+        display: none;
+      }
+
+      &:hover {
+        .pagination {
+          display: flex;
+        }
+      }
+
+      &.at-top {
+        .pagination {
+          display: flex;
+        }
+      }
+    }
   }
 
   .loading {
@@ -18,10 +56,6 @@
     display: flex;
     justify-content: center;
     background-color: rgba(255, 255, 255, 25%);
-
-    .ant-spin-dot-holder {
-      color: rgba(255, 255, 255, 90%);
-    }
   }
 
   .copy {
